--July 14, 2009--
- Now the TimeLine sets-up a menu for each item, available by right-clicking on it: implemented the
  switch branch feature.

--July 12, 2009--
- Fixed a strange behaviour with GitRunner class which causes the app to continue runnig, even if
  the app is closed. Extended TimeLine class; now it shows in the main window the current branches
  and its related commits, and more infos are provided when moving the mouse over the icons.

--July 7, 2009--
- Fixed DvcsJob behaviour when are performed sequential calls, like in the unit test.
  Added the following action in the GitRunner class: remove, status, log, reset, newBranch,
  switchBranch, branches.

--July 5, 2009--
- Splitted the Sidebar class, coded the following git action: init, add, commit, isValidDirectory
  and clone ( only with local repo, for now ). Wrote a simple test case, and start integrating it
  in the timeline class.

--June 1, 2009--
-Appropriate kpart shown when an item is selected from the tree in the Edit tab.

--June 24, 2009--
-Simple 'Pick wallpaper plugin' functionality added to previewer