@@ -13,6 +13,8 @@ set (PlasMate_SRC
     sidebar.cpp
     savesystem/dvcsjob.cpp
     savesystem/gitrunner.cpp
+    savesystem/branchdialog.cpp
+    savesystem/commitdialog.cpp
     savesystem/timelineitem.cpp
     savesystem/timelinedelegate.cpp
     savesystem/timelinelistwidget.cpp
